force-app/main/default/objects/CarbonFootprint__c/CarbonFootprint__c.object-meta.xml
<CustomObject>
    <label>Carbon Footprint</label>
    <nameField>
        <label>Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Carbon Footprints</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>