force-app/main/default/objects/CarbonFootprint__c/fields/CO2_Reduced__c.field-meta.xml
<CustomField>
    <fullName>CO2_Reduced__c</fullName>
    <label>CO2 Reduced (kg)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>