force-app/main/default/objects/CarbonFootprint__c/fields/CO2_Saved__c.field-meta.xml
<CustomField>
    <fullName>CO2_Saved__c</fullName>
    <label>CO2 Saved</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>