force-app/main/default/objects/CarbonFootprint__c/fields/Energy_Type__c.field-meta.xml
<CustomField>
    <fullName>Energy_Type__c</fullName>
    <label>Energy Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Solar</fullName>
            </value>
            <value>
                <fullName>Wind</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>