force-app/main/default/objects/CarbonFootprint__c/validationRules/Prevent_Negative_CO2.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Negative_CO2</fullName>
    <active>true</active>
    <description>Do not allow negative CO2 Saved values</description>
    <errorConditionFormula>CO2_Saved__c &lt; 0</errorConditionFormula>
    <errorMessage>CO2 Saved cannot be negative</errorMessage>
    <errorDisplayField>CO2_Saved__c</errorDisplayField>
</ValidationRule>