force-app/main/default/objects/CarbonFootprint__c/validationRules/Subscription_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Subscription_Required</fullName>
    <active>true</active>
    <description>Ensure that a subscription is linked to the carbon footprint</description>
    <errorConditionFormula>ISBLANK(Subscription__c)</errorConditionFormula>
    <errorMessage>Subscription must be selected</errorMessage>
    <errorDisplayField>Subscription__c</errorDisplayField>
</ValidationRule>